--- a/PaginaPrin/src/index.html
+++ b/PaginaPrin/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title> Productos SAM </title>
+  <title> ProductosSAN </title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
@@ -30,17 +30,5 @@
   <script src="assets/js/main.js"></script>	
   
    <app-root></app-root>
-
-   <script type="text/javascript">
-    var nav = document.querySelector('nav');
-
-    window.addEventListener('scroll', function () {
-      if (window.pageYOffset > 100) {
-        nav.classList.add('bg-dark', 'shadow');
-      } else {
-        nav.classList.remove('bg-dark', 'shadow');
-      }
-    });
-  </script>
 </body>
 </html>
